--- a/Flora.mw
+++ b/Flora.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_apayao_flora.png|right|Mapa na Apayao ya nanengneng so location na Flora]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Flora, Apayao
 | 1990 = 10810		
@@ -37,6 +38,9 @@ Say Flora walay 16 ya [[barangay]].
 * Santa Maria
 * Upper Atok (Coliman)
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
