--- a/Kabugao.mw
+++ b/Kabugao.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_apayao_kabugao.png|right|Mapa na Apayao ya nanengneng so location na Kabugao]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kabugao, Apayao
 | 1990 = 11198		
@@ -42,6 +43,9 @@ Say Kabugao walay 21 ya [[barangay]].
 * Tuyangan
 * Waga
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 
