--- a/Luna,_Apayao.mw
+++ b/Luna,_Apayao.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_apayao_luna.png|right|Mapa na Apayao ya nanengneng so location na Luna]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Luna, Apayao
 | 1990 = 10550		
@@ -43,6 +44,9 @@ Say Luna walay 22 ya [[barangay]].
 * Shalom
 * Turod
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
