--- a/Pudtol.mw
+++ b/Pudtol.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_apayao_pudtol.png|right|Mapa na Apayao ya nanengneng so location na Pudtol]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pudtol, Apayao
 | 1990 = 7621		
@@ -43,6 +44,9 @@ Say Pudtol walay 22 ya [[barangay]].
 * San Luis
 * San Mariano
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
