--- a/Santa_Marcela.mw
+++ b/Santa_Marcela.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_apayao_santa marcela.png|right|Mapa na Apayao ya nanengneng so location na Santa Marcela]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Marcela, Apayao
 | 1990 = 7622		
@@ -30,6 +31,9 @@ Say Santa Marcela walay 13 ya [[barangay]].
 * San Carlos
 * San Juan
 * San Mariano
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
