--- a/Template:Aurora.mw
+++ b/Template:Aurora.mw
@@ -6,7 +6,7 @@
 |listclass = hlist
 |group1 = Saray baley
 |list1 = 
-* [[Baler, Aurora|Baler]]
+* [[Baler]]
 * [[Casiguran, Aurora|Casiguran]]
 * [[Dilasag, Aurora|Dilasag]]
 * [[Dinalungan, Aurora|Dinalungan]]
