--- a/Baler.mw
+++ b/Baler.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aurora baler.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baler, Aurora
 | 1990 = 24689		
@@ -29,10 +30,14 @@ Say '''Baler''' et kumapat ya klase baley ed luyag na [[Aurora]], [[Pilipinas]].
 * Suclayin
 * Zabali
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Aurora}}															
+{{Aurora}}	
+														
 [[Category:Saray baley na Aurora]]
