--- a/Dinalungan.mw
+++ b/Dinalungan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aurora dinalungan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dinalungan, Aurora
 | 1990 = 6770		
@@ -25,10 +26,14 @@ Say '''Dinalungan''' et kumapat ya klase baley ed luyag na [[Aurora]], [[Pilipin
 * Paleg
 * Simbahan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Aurora}}															
+{{Aurora}}	
+														
 [[Category:Saray baley na Aurora]]
