--- a/San_Luis,_Aurora.mw
+++ b/San_Luis,_Aurora.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aurora san luis.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Luis, Aurora
 | 1990 = 16740		
@@ -34,10 +35,14 @@ Say '''San Luis''' et kumadwa ya klase baley ed luyag na [[Aurora]], [[Pilipinas
 * San Jose
 * Zarah
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Aurora}}															
+{{Aurora}}	
+														
 [[Category:Saray baley na Aurora]]
