--- a/Akbar,_Basilan.mw
+++ b/Akbar,_Basilan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator basilan akbar.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Akbar, Basilan
 | 1990 =		
@@ -24,6 +25,9 @@ Say '''Akbar''' et kumanem ya klase baley ed luyag na [[Basilan]], [[Pilipinas]]
 *Semut
 *Upper Bato-bato
 *Upper Sinangkapan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
