--- a/Al-Barka.mw
+++ b/Al-Barka.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator basilan al-barka.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Al-Barka, Basilan
 | 1990 =		
@@ -32,10 +33,14 @@ Say '''Al-Barka''' et kumanem ya klase baley ed luyag na [[Basilan]], [[Pilipina
 *Magcawa
 *Sangkahan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Basilan}}															
+{{Basilan}}	
+														
 [[Category:Saray baley na Basilan]]
