--- a/Maluso.mw
+++ b/Maluso.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator basilan maluso.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maluso, Basilan
 | 1990 = 18666		
@@ -36,10 +37,14 @@ Say '''Maluso''' et kumapat ya klase baley ed luyag na [[Basilan]], [[Pilipinas]
 * Port Holland Zone V
 * Upper Garlayan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Basilan}}															
+{{Basilan}}	
+														
 [[Category:Saray baley na Basilan]]
