--- a/Tuburan,_Basilan.mw
+++ b/Tuburan,_Basilan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator basilan tuburan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tuburan, Basilan
 | 1990 = 27800		
@@ -26,10 +27,14 @@ Say '''Tuburan''' et kumadwa ya klase baley ed luyag na [[Basilan]], [[Pilipinas
 * Katipunan
 * Lower Tablas
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Basilan}}															
+{{Basilan}}	
+														
 [[Category:Saray baley na Basilan]]
