--- a/Ungkaya_Pukan.mw
+++ b/Ungkaya_Pukan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator basilan ungkaya pukan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ungkaya Pukan, Basilan
 | 1990 =		
@@ -28,10 +29,14 @@ Say '''Ungkaya Pukan''' et kumanem ya klase baley ed luyag na [[Basilan]], [[Pil
 *Tongbato
 *Ulitan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Basilan}}															
+{{Basilan}}	
+														
 [[Category:Saray baley na Basilan]]
