--- a/Siyudad_na_Isabela.mw
+++ b/Siyudad_na_Isabela.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_basilan_isabela.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Siyudad na Isabela''' et kumapat ya klase siyudad ed luyag na [[Basilan]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 112,788 totoo. <br> 	
-Walay kabaleg tan sukat to ya 223.73 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 7300. 			
+Walay kabaleg tan sukat to ya 223.73 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 7300. 
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Basilan}}			
 									
 [[Category:Saray siyudad na Filipinas]]
