--- a/Lamitan.mw
+++ b/Lamitan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_basilan_lamitan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Lamitan''' et kumalima ya klase siyudad ed luyag na [[Basilan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 68,996 totoo. <br> 	
-Walay kabaleg tan sukat to ya 354.45 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 7302. 			
+Walay kabaleg tan sukat to ya 354.45 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 7302. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Basilan}}	
 									
 [[Category:Saray siyudad na Filipinas]]
