--- a/Abucay.mw
+++ b/Abucay.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_bataan_abucay.png|right|Mapa na Bataan ya nanengneng so location na Abucay]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Abucay, Bataan
 | 1990 = 26708		
@@ -26,6 +27,9 @@ Say Abucay walay 9 ya [[barangay]].
 * Omboy
 * Salian
 * Wawa (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
