--- a/Bagac.mw
+++ b/Bagac.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_bataan_bagac.png|right|Mapa na Bataan ya nanengneng so location na Bagac]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bagac, Bataan
 | 1990 = 18241		
@@ -36,6 +37,9 @@ Say Bagac walay 14 ya [[barangay]].
 * Tabing-Ilog (Pob.)
 * Atilano L. Ricardo
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
