--- a/Dinalupihan.mw
+++ b/Dinalupihan.mw
@@ -1,22 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Dinalupihan |
- locatormapfile = Ph_locator_bataan_dinalupihan.png |
- caption      = Mapa na [[Bataan]] ya nanengneng so location na Dinalupihan |
- region       = [[Central Luzon]] (Region III) |
- province     = [[Bataan]] |
- districts    = first district of Bataan |
- barangays    = 46 |
- class        = first class; partially urban |
- mayor        = [[Joel Payumo|Joel Jaime P. Payumo]] |
- founded      = [[1756]]<br>[[1917]] |
- cityhood     = |
- areakm2      = 92.52 |
- pop2000      = 92,289 |
- popden2000   = 1100 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dinalupihan, Bataan
 | 1990 = 58172		
@@ -87,6 +70,9 @@ Say Dinalupihan walay 46 ya [[barangay]].
 * Tubo-tubo
 * Jose C. Payumo, Jr.
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 *[http://dinalupihanbataan.gov.ph/ Dinalupihan Website]
