--- a/Dinalupihan.mw
+++ b/Dinalupihan.mw
@@ -83,9 +83,9 @@ Say Dinalupihan walay 46 ya [[barangay]].
 |Center    = Dinalupihan
 |North     = [[Olongapo]], [[Floridablanca, Pampanga]]
 |Northeast = 
-|East      = [[Lubao, Pampanga]]<br>[[Hermosa]]
+|East      = [[Lubao, Pampanga]]<br>[[Hermosa, Bataan|Hermosa]]
 |Southeast = 
-|South     = [[Hermosa]]
+|South     = [[Hermosa, Bataan|Hermosa]]
 |Southwest = [[Metropolitano a Turay ti Luek a Subic]]<br>[[Morong, Bataan|Morong]]
 |West      = [[Olongapo]]
 |Northwest = 
