--- a/Hermosa.mw
+++ b/Hermosa.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_bataan_hermosa.png|right|Mapa na Bataan ya nanengneng so location na Hermosa]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hermosa, Bataan
 | 1990 = 34633		
@@ -44,6 +45,9 @@ Say Hermosa walay 23 ya [[barangay]].
 * Judge Roman Cruz Sr. (Mandama)
 * Sacrifice Valley
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 
