--- a/Limay.mw
+++ b/Limay.mw
@@ -1,21 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city 
-| infoboxtitle = Baley na Limay<br>''Municipality of Limay'' |
-| locatormapfile = Ph_locator_bataan_limay.png |
-| caption      = Mapa na Bataan ya nanengneng so location na Limay. |
-| region       = [[Pegley na Luzon]] (Region 3) |
-| province     = [[Bataan]] |
-| districts    = 2<sup>nd</sup> district of Bataan |
-| barangays    = 12 |
-| class        = Premier class; partially urban 
-| mayor        = [[Lilvir B. Roque]] |
-| founded      = [[1917]]|
-| areakm2      = 103.60 |
-| pop2000      =  54,782 |
-| popden2000   = 5300 |
-| coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Limay, Bataan
 | 1990 = 32629		
@@ -47,6 +31,9 @@ Say Limay walay 12 ya [[baranggay]].
 * San Francisco de Asis
 * St. Francis II
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.mybataan.com/content/view/70/132/ Limay Bataan General Information]
@@ -55,6 +42,5 @@ Say Limay walay 12 ya [[baranggay]].
 {{Bataan}}
 
 [[Category:Saray baley na Bataan]]
-[[category:1917 establishments]]
 
 {{stub}}
