--- a/Mariveles.mw
+++ b/Mariveles.mw
@@ -1,21 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Municipality of Mariveles |
- locatormapfile = Ph_locator_bataan_mariveles.png |
- caption      = Map of [[Bataan]] showing the location of Mariveles. |
- region       = [[Pegley na Luzon]] (Region 3) |
- province     = [[Bataan]] |
- districts    = 2nd district of Bataan |
- barangays    = 18 |
- class        = 1st class; partially urban |
- mayor        = Jesse Concepxion |
- founded      = [[1754]]|
- areakm2      =  |
- pop2000      =  |
- popden2000   =  |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mariveles, Bataan
 | 1990 = 60761		
@@ -58,6 +42,8 @@ Say Mariveles walay 18 ya [[barangay]]:
 * [[Townsite (Mariveles)|Townsite]]
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
 == Ofisial a websait ==
 
@@ -66,4 +52,5 @@ Say Mariveles walay 18 ya [[barangay]]:
 {{stub}}
 
 {{Bataan}}
+
 [[Category:Saray baley na Bataan]]
