--- a/Morong,_Bataan.mw
+++ b/Morong,_Bataan.mw
@@ -1,4 +1,4 @@
-[[Image:Ph_locator_bataan_morong.png|right|Mapa na Bataan ya nanengneng so location na Morong]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Morong, Bataan
@@ -24,6 +24,9 @@ Say Morong walay 5 ya [[barangay]].
 * Nagbalayong
 * Poblacion
 * Sabang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
