--- a/Orani.mw
+++ b/Orani.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_bataan_orani.png|right|Mapa na Bataan ya nanengneng so location na Orani]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Orani, Bataan
 | 1990 = 43494		
@@ -55,6 +56,9 @@ Say Orani walay 33 ya [[barangay]].
 * Tugatog
 * Wawa (Pob.)
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
