--- a/Pilar,_Bataan.mw
+++ b/Pilar,_Bataan.mw
@@ -1,21 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Municipality of Pilar<br>Baley na Pilar |
- locatormapfile = Ph_locator_bataan_pilar.png |
- caption      = Map of [[Bataan]] showing the location of Pilar. |
- region       = [[Pegley na Luzon]] (Region 3) |
- province     = [[Bataan]] |
- districts    = 2nd district of Bataan |
- barangays    = 14 |
- class        = 4th class |
- mayor        = [[Carlos Pizarro, Jr.]] |
- founded      = [[1917]]|
- areakm2      =  |
- pop2000      = 32,368 |
- popden2000   =  |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pilar, Bataan
 | 1990 = 25244		
@@ -38,12 +22,12 @@ Say Pilar walay 19 ya [[barangay]]:
 <td valign=top>
 * Ala-uli
 * Bagumbayan
-* [[Balut I]]
-* [[Balut II]]
+* Balut I
+* Balut II
 * Bantan Munti
 * Burgos
 * Del Rosario (Poblacion)
-* [[Diwa]]
+* Diwa
 * Landing
 * Liyang
 </td><td valign=top>
@@ -57,6 +41,9 @@ Say Pilar walay 19 ya [[barangay]]:
 * Wakas South
 * Wawa
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
