--- a/Samal,_Bataan.mw
+++ b/Samal,_Bataan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_bataan_samal.png|right|Mapa na Bataan ya nanengneng so location na Samal]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Samal, Bataan
 | 1990 = 21991		
@@ -32,6 +33,8 @@ Say Orion walay 14 ya [[barangay]].
 * West Calaguiman 
 * West Daang Bago (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
