--- a/Basco.mw
+++ b/Basco.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_batanes_basco.png|right|Mapa na Batanes ya nanengneng so location na Basco]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Basco, Batanes
 | 1990 = 5729		
@@ -23,6 +24,9 @@ Say Basco walay 6 ya [[barangay]].
 * San Joaquin
 * Chanarian
 * Kayhuvokan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
