--- a/Itbayat.mw
+++ b/Itbayat.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_batanes_itbayat.png|right|Mapa na Batanes ya nanengneng so location na Itbayat]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Itbayat, Batanes
 | 1990 = 3448		
@@ -22,6 +23,9 @@ Say Itbayat walay 5 ya [[barangay]].
 * Santa Lucia (Kauhauhasan)
 * Santa Maria (Marapuy)
 * Santa Rosa (Kaynatuan)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
