--- a/Ivana.mw
+++ b/Ivana.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_batanes_ivana.png|right|Mapa na Batanes ya nanengneng so location na Ivana]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ivana, Batanes
 | 1990 = 1190		
@@ -21,6 +22,9 @@ Say Ivana walay 4 ya [[barangay]].
 * Salagao 
 * San Vicente (Igang) 
 * Tuhel (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
