--- a/Mahatao.mw
+++ b/Mahatao.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_batanes_mahatao.png|right|Mapa na Batanes ya nanengneng so location na Mahatao]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mahatao, Batanes
 | 1990 = 1724		
@@ -21,6 +22,9 @@ Say Mahatao walay 4 ya [[barangay]].
 * Kaumbakan
 * Panatayan
 * Uvoy (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
