--- a/Sabtang.mw
+++ b/Sabtang.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_batanes_sabtang.png|right|Mapa na Batanes ya nanengneng so location na Sabtang]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sabtang, Batanes
 | 1990 = 1737		
@@ -23,6 +24,9 @@ Say Sabtang walay 6 ya [[barangay]].
 * Savidug
 * Sinakan (Pob.)
 * Sumnanga
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
