--- a/Uyugan.mw
+++ b/Uyugan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_batanes_uyugan.png|right|Mapa na Batanes ya nanengneng so location na Uyugan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Uyugan, Batanes
 | 1990 = 1198		
@@ -22,6 +23,8 @@ Say Uyugan walay 4 ya [[barangay]].
 * Itbud
 * Kayuganan (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
