--- a/Agoncillo,_Batangas.mw
+++ b/Agoncillo,_Batangas.mw
@@ -1,21 +1,5 @@
-{{Infobox Philippine city |
- infoboxtitle = Baley na Agoncillo<br>''Commune di Agonzillo''<br>''Miasta Agonziłn'' |
- sealfile     = |
- locatormapfile = Ph_locator_batangas agoncillo.png |
- caption      = Map of [[Batangas]] showing the location of Agoncillo. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 21 |
- class        = 4th class |
- mayor        = Nirvano Reyes |
- founded      = - |
- cityhood     =  |
- areakm2      =  |
- pop2000      = 38,059 |
- popden2000   =  760 |
- coordinates  = |
-}}
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Agoncillo, Batangas
 | 1990 = 20227		
@@ -64,6 +48,8 @@ Say Agoncillo walay 21 ya [[barangay]]:
 |}
 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{batangas}}
 
