--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -7,8 +7,8 @@
 |group1 = Saray baley
 |list1 = 
 * [[Agoncillo, Batangas|Agoncillo]]
-* [[Alitagtag]]
-* [[Balayan]]
+* [[Alitagtag, Batangas|Alitagtag]]
+* [[Balayan, Batangas|Balayan]]
 * [[Balete, Batangas|Balete]]
 * [[Bauan, Batangas|Bauan]]
 * [[Calaca, Batangas|Calaca]]
