--- a/Balete,_Batangas.mw
+++ b/Balete,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Balete |
- sealfile     =  |
- locatormapfile = Ph_locator_batangas balete.png |
- caption      = Map of [[Batangas]] showing the location of Balete. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 13 |
- class        = 5th class |
- mayor        = Hon. [[Leovino Hidalgo|Leovino "Carolyn" Hidalgo]] |
- founded      = [[1838]] |
- cityhood     = |
- areakm2      = 25.00 |
- pop2000      = 22,661 <small>(2015)</small> |
- popden2000   = 910 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balete, Batangas
 | 1990 = 11678		
@@ -37,23 +19,24 @@ Say '''Balete'''  sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas
 [[Image:Baleteshore.JPG|right|thumb|250px|Bambanka ya nang-esdaan son shore ed [[Dan-aw Taal]] ed Balete]]
 Say Balete walay 13 ya [[barangay]]:
 
-* [[Alangilan (Balete, Batangas)|Alangilan]]
-* [[Kalawit|Calawit]]
-* [[Looc (Balete, Batangas)|Looc]]
-* [[Magapi]]
-* [[Makina (Batangas)|Makina]]
-* [[Malabanan]]
-* [[Paligawan]]
-* [[Palsara]]
-* [[Poblacion (Balete, Batangas)|Población]]
-* [[Sala (Balete, Batangas)|Sala]]
-* [[Sampalocan (Balete, Batangas)|Sampalocan]]
-* [[San Sebastián (Balete, Batangas)|San Sebastián]]
-* [[Solis (barangay)|Solis]]
+* Alangilan
+* Calawit
+* Looc
+* Magapi
+* Makina
+* Malabanan
+* Paligawan
+* Palsara
+* Poblacion
+* Sala
+* Sampalocan
+* Solis
+* San Sebastian
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
-{{Balete, Batangas}}
 {{Batangas}}
 
 [[Category:Batangas]]
