--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -12,7 +12,7 @@
 * [[Balete, Batangas|Balete]]
 * [[Bauan, Batangas|Bauan]]
 * [[Calaca, Batangas|Calaca]]
-* [[Calatagan]]
+* [[Calatagan, Batangas|Calatagan]]
 * [[Cuenca, Batangas|Cuenca]]
 * [[Ibaan, Batangas|Ibaan]]
 * [[Laurel, Batangas|Laurel]]
