--- a/Cuenca.mw
+++ b/Cuenca.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Cuenca<br>''Municipality of Cuenca''<br>''Город Квенкански''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas cuenca.png |
- caption      = Map of [[Batangas]] showing the location of the municipality of Cuenca. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 21 |
- class        = 4th class |
- mayor        = [[Edmund Remo]] |
- founded      = [[1877]] |
- cityhood     = - |
- areakm2      = 58.18 |
- pop2000      = 32,783 <small>(2015)</small> |
- popden2000   = 563.47 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cuenca, Batangas
 | 1990 = 20176		
@@ -30,10 +12,10 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''[[Cuenca]]''' ([[salitan Ruso|Ruso]]: ''Город Квенкански''), sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]]. Onong ed [[2015]] census, walay population to ya 32,783 ya too diad 5,222 ya pamilya.
+Say '''Cuenca''' sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]]. Onong ed [[2015]] census, walay population to ya 32,783 ya too diad 5,222 ya pamilya.
 
 == Listaan na barangay ==
-[[Image:Mt. Maculot.jpg|thumb|right|<center>The Famous Cuenca's Tourist Attraction; Mt. Maculot</center>]]
+[[Image:Mt. Maculot.jpg|thumb|right|The Famous Cuenca's Tourist Attraction; Mt. Maculot]]
 Saray [[barangay]] ed Cuenca no twenty one:
 
 <table border=0><tr>
@@ -61,6 +43,9 @@ Saray [[barangay]] ed Cuenca no twenty one:
 * Barangay 7 (Pob.)
 * Barangay 8 (Pob.)
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
