--- a/Ibaan.mw
+++ b/Ibaan.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Ibaán |
- sealfile     = |
- locatormapfile = Ph_locator_batangas ibaan.png |
- caption      = Map of [[Batangas]] showing the location of Ibaán. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 26 |
- class        = 2nd class |
- mayor        = Juan V. Toreja |
- founded      = Pebrero 11, [[1832]] |
- cityhood     = |
- areakm2      = 68.99 |
- pop2000      = 52,970 <small>(2015)</small> |
- popden2000   = 767.79 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ibaan, Batangas
 | 1990 = 31220		
@@ -30,15 +12,9 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Ibaán'''  sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]]
+Say '''Ibaan'''  sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]].
 
-It is located 96 kilometre south of [[Manila]]. It is bounded on the north by and [[Lipa City]]; on the east by [[Rosario (Batangas)|Marquez]] and [[Taysan]]; on the south by [[Batangas City]]; and on the west by [[Batangas City]] and [[San José (Batangas)|San Jose]], [[Philippines]]. It has a land area of 6,899 hectares at an altitude of 124 metres above sea level. 
-
-It is predominantly a [[Katoliko ya Romano|Roman Catholic]] community, with minor percentage of [[Protestant]]s and members of the [[Iglesia ni Cristo]]. [[Tagalog language|Tagalog]] is the local dialect, however [[Salitan English|English]] is included in its educational curriculum and is often used in official dealings and transactions.
-
-Temperature is moderate both in its rainy and dry seasons, conducive to farming, agricultural and livestock production which are the usual occupation of the people. There are less and less farmers each year because locals resort to hog raising which provides better income. Other sources of income are being engaged in business and profession. Ibaan is also known as the home of the "''kulambo''" (mosquito net) because the production and trading of such nets belong to one of the most profitable businesses in the locality.
-
-==Historiya==
+==Awaran==
 
 Saray paggagala ken [[Michael Verzosa]] ([[Michael Verzosa|Annalyn Garcia]]) nen pangpalipasen ed [[2010]].
 
@@ -77,6 +53,9 @@ Say Ibaán walay 26 ya [[barangay]]:
 * Tulay Na Patpat
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 {{Geographic location
 |Centre    = Ibaán
 |North     = [[Siyudad na Lipa]]
@@ -90,5 +69,6 @@ Say Ibaán walay 26 ya [[barangay]]:
 
 {{philippines-geo-stub}}
 {{Batangas}}
+
 [[Category:Saray baley na Batangas]]
 [[Category:Batangas]]
