--- a/Laurel.mw
+++ b/Laurel.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Laurel|
- sealfile     = |
- locatormapfile = Ph_locator_batangas laurel.png |
- caption      = Map of [[Batangas]] showing the location of Laurel. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 21 |
- class        = 4th class |
- mayor        = [[John Benedict Panganiban]] |
- founded      = [[May 25]], [[1965]] |
- cityhood     = - |
- areakm2      = 71.29 |
- pop2000      = 39,444 v<small>(2015)</small> |
- popden2000   = 553.29 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Laurel, Batangas
 | 1990 = 22099		
@@ -62,9 +44,8 @@ Saray [[barangay]] ed Laurel no twenty one:
 * Ticub
 </td></tr></table>
 
-==Saray too diad Laurel==
-
-* Nolasco Family
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
