--- a/Lemery,_Batangas.mw
+++ b/Lemery,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Lemery<br>''Municipalité du Lémeré''<br>''Municipalidad de Lémeré''<br>''Municipality of Lemery''|
- sealfile     =  |
- locatormapfile = Ph_locator_batangas lemery.png |
- caption      = Map of [[Batangas]] showing the location of Lemery. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = first district |
- barangays    = 46 |
- class        = first class |
- mayor        = [[Larry Alilio]] |
- founded      = [[1835]] |
- cityhood     = - |
- areakm2      = 109.80 |
- pop2000      = 93,157 <small>(2015)</small> |
- popden2000   = 848.42 |
- coordinates  = "Lémeré" sakey lubay na salitan Français tan Espanol|
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lemery, Batangas
 | 1990 = 53932		
@@ -32,9 +14,7 @@
 |}}
 Say '''Lemery''' ([[salitan Français|Français]]: ''Municipalité du Lémeré''; [[salitan Espanol|Espanol]]: ''Municipalidad de Lémeré''), sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
-
 == Listaan na barangay ==
-
 
 Saray [[barangay]] no forty-six:
 
@@ -90,6 +70,8 @@ Saray [[barangay]] no forty-six:
 * Sinisian West
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{batangas}}
