--- a/Lian.mw
+++ b/Lian.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Lian |
- sealfile     =  |
- locatormapfile = Ph_locator_batangas lian.png |
- caption      = Map of [[Batangas]] showing the location of Lian. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 1st district |
- barangays    = 19 |
- class        = 4th class |
- mayor        = Hon. [[Jeffrey Lhar Ramos]] |
- founded      = [[January 1]], [[1915]] |
- cityhood     = |
- areakm2      =76.80 |
- pop2000      = 52,660 <small>(2015)</small> |
- popden2000   = 685.68 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lian, Batangas
 | 1990 = 31296		
@@ -30,8 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Lian'''  sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]]
-
+Say '''Lian'''  sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -61,6 +42,8 @@ Say Lian walay 19 ya [[barangay]]:
 * San Diego
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
