--- a/Lobo.mw
+++ b/Lobo.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Lobo<br>''Municipality of Lobo''<br>''Город Лобо''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas lobo.png |
- caption      = Map of [[Batangas]] showing the location of the municipality of Lobo. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 2nd district |
- barangays    = 26 |
- class        = 4th class |
- mayor        = Noel Caroline Abasa, Jr. |
- founded      = [[1689]] |
- cityhood     = - |
- areakm2      = 175.03 |
- pop2000      = 41,504 <small>(2015)</small> |
- popden2000   = 237.12 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lobo, Batangas
 | 1990 = 26881		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''[[Lobo (panpalinewan)|Lobo]]''' ([[salitan Ruso|Ruso]]: ''Город Лобо''), sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
+Say '''Lobo''' sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -66,6 +48,9 @@ Saray [[barangay]] ed Lobo no twenty six:
 * Tayuman
 * [[Poblacion (Lobo)|Población]]
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
