--- a/Mabini,_Batangas.mw
+++ b/Mabini,_Batangas.mw
@@ -1,6 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-[[image:Ph locator batangas mabini.png|right|thumb|Mabini]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mabini, Batangas
 | 1990 = 30474		
@@ -13,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Mabini''' ([[salitan Baybayin|Baybayin]]/[[salitan Hapónes|Hapónes]]: ''マビニ市''), so sakey baley diad [[filipinas|Pilipino]] ed luyag na [[Batangas]].
+Say '''Mabini''' so sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]].
 
 
 ==Saray baranggay==
@@ -60,8 +59,11 @@ Saray barangay ed Mabini no 34:
 * Talaga East
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 {{philippines-geo-stub}}
 {{Batangas}}
 
-[[category:Batangas]]
+[[Category:Batangas]]
 [[Category:Saray baley na Batangas]]
