--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -20,7 +20,7 @@
 * [[Lian, Batangas|Lian]]
 * [[Lobo, Batangas|Lobo]]
 * [[Mabini, Batangas|Mabini]]
-* [[Malvar]]
+* [[Malvar, Batangas|Malvar]]
 * [[Mataasnakahoy]]
 * [[Nasugbu, Batangas|Nasugbu]]
 * [[Padre Garcia]]
