--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -21,7 +21,7 @@
 * [[Lobo, Batangas|Lobo]]
 * [[Mabini, Batangas|Mabini]]
 * [[Malvar, Batangas|Malvar]]
-* [[Mataasnakahoy]]
+* [[Mataasnakahoy, Batangas|Mataasnakahoy]]
 * [[Nasugbu, Batangas|Nasugbu]]
 * [[Padre Garcia]]
 * [[Rosario, Batangas|Rosario]]
