--- a/Mataasnakahoy,_Batangas.mw
+++ b/Mataasnakahoy,_Batangas.mw
@@ -1,21 +1,5 @@
-{{Infobox Philippine city |
- infoboxtitle = Mataasnakahoy<br>''Iliako Benzelladezz''<br>''Ili ti Kadakkelan a Kahoy''<br>''Baley na Dakkel ya Ka-oy''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas mataas na kahoy.png |
- caption      =|
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 16 |
- class        = 4th class |
- mayor        = [[Danilo M. Sombrano]] |
- founded      = Marso 27, 1931 |
- cityhood     = - |
- areakm2      = 22.10 |
- pop2000      = 29,187 <small>(2015)</small> |
- popden2000   = 1275 |
- coordinates  =  |
-}}
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mataasnakahoy, Batangas
 | 1990 = 15240		
@@ -51,10 +35,10 @@ Saray [[barangay]] ed Mataas na Kahoy walay 16:
 * Santol
 * Upa
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Batangas}}
 
-[[Category:Batangas]]
-
-															
+[[Category:Batangas]]														
 [[Category:Saray baley na Batangas]]
