--- a/Nasugbu.mw
+++ b/Nasugbu.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Nazugbu<br />''Municipality of Nasugbu''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas nasugbu.png |
- caption      = Map of [[Batangas]] showing the location of Nasugbu. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = first district |
- barangays    = 42 |
- class        = Girlfriend's municipality |
- mayor        = [[Tony Barcelon]] |
- founded      = Nun [[1852]] ed bangon yon subukan nga bario;<br />Enero 31, [[1947]] sakey baley na [[Lian]];<br />[[2009]] - ragay [[Jennica Garcia]] mabalin ed baley na Metro Cavite-Bataan |
- cityhood     = - |
- areakm2      = 278.51 |
- pop2000      = 134,113 <small>(2015)</small> |
- popden2000   = 481.5 |
- coordinates  = Ayun so Nazugbuan sakey lubay na salitan tan too |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nasugbu, Batangas
 | 1990 = 75515		
@@ -30,7 +12,8 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Nazugbu''', ed [[salitan Latino|Latino]] (e.g. '''Nasugbu'''), sakey baley ya babai na pangara diad [[Filipinas|Pilipino]] ed [[Batangas]].
+
+Say '''Nasugbu''' so sakey baley diad [[Filipinas]] ed luyag na [[Batangas]].
 
 == Listaan na barangay ==
 [[File:Nasugbu 10 (Municipal Hall).JPG|right|thumb|200px|Municipio na Nazugbu, Batangas]]
@@ -103,6 +86,8 @@ Saray [[barangay]] ed Nazugbu no forty two:
 * [[Cebuana Lhuillier]] Nazugbu
 * [[M Lhuillier]] Nazugbu
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
