--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -23,7 +23,7 @@
 * [[Malvar, Batangas|Malvar]]
 * [[Mataasnakahoy, Batangas|Mataasnakahoy]]
 * [[Nasugbu, Batangas|Nasugbu]]
-* [[Padre Garcia]]
+* [[Padre Garcia, Batangas|Padre Garcia]]
 * [[Rosario, Batangas|Rosario]]
 * [[San Jose, Batangas|San Jose]]
 * [[San Juan, Batangas|San Juan]]
