--- a/Rosario,_Batangas.mw
+++ b/Rosario,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Rosario<br>''Municipalidad del Márquez'' |
- sealfile     = |
- locatormapfile = Ph_locator_batangas rosario.png |
- caption      = Map of [[Batangas]] showing the location of Rosario, or Márquez. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Batangas]] |
- districts    = 4th district |
- barangays    = 48 |
- class        = first class |
- mayor        = [[Manuel Álvarez]] |
- founded      = [[1687]]|
- cityhood     =  |
- areakm2      = 226.88  |
- pop2000      = 95,785 |
- popden2000   = 420 |
- coordinates  = 13°50′42″N 121°12′13″E |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rosario, Batangas
 | 1990 = 66923		
@@ -90,8 +72,10 @@ Say Rosario walay 42 ya [[barangay]]:
 * Tulos
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{batangas}}
 
-[[category:Batangas]]
+[[Category:Batangas]]
 [[Category:Saray baley na Batangas]]
