--- a/San_Jose,_Batangas.mw
+++ b/San_Jose,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na San José<br>''Municipality of San José''<br>''Город Санкт Хосеф''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas san jose.png |
- caption      = Map of [[Batangas]] showing the location of the municipality of San José. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 4th district |
- barangays    = 33 |
- class        = 1st class |
- mayor        = Tikyo Briones |
- founded      = Abril 27, [[1765]] |
- cityhood     = - |
- areakm2      = 226.9000 |
- pop2000      = 685170 |
- popden2000   = 302 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Batangas
 | 1990 = 38680		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''[[San José]]''' ([[salitan Ruso|Ruso]]: ''Город Санкт Хосеф''), sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
+Say '''San Jose''' sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -74,6 +56,9 @@ Saray [[barangay]] ed San José no thirty three:
 * Tugtug
 * [[Bigain ed Abalaten|Bigain South]]
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
