--- a/San_Juan,_Batangas.mw
+++ b/San_Juan,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = San Juan<br>''Municipalidad de Bolboc''<br>''Bayan ng San Juan de Bolbok'' |
- sealfile     = Ph_seal_batangas sanjuan.png|
- locatormapfile = Ph_locator_batangas san juan.png |
- caption      = Map of [[Batangas]] showing the location of San Juan. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Batangas]] |
- districts    = 4th district |
- barangays    = 42 |
- class        = first class |
- mayor        = [[Rodolfo H. Manalo]] |
- founded      = [[December 12|Disiembre 12]], [[1848]]|
- cityhood     =  |
- areakm2      = 273.40 |
- pop2000      = 94,291 |
- popden2000   =  |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Juan, Batangas
 | 1990 = 67741		
@@ -30,9 +12,11 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-[[image:San juan batangas tag line.png|left|200px]]
 
-[[image:Virgin Beach Laiya.jpg|left|thumb|200px|La Iya, San Juan]] Say '''San Juan''' ([[salitan Filipino|Filipino]]: ''Bolboc''; [[salitan Tagalog|Tagalog]]: ''[[Bolbok]]'') sakey arapan ya klase na [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Batangas]].
+Say '''San Juan''' ([[salitan Filipino|Filipino]]: ''Bolboc''; [[salitan Tagalog|Tagalog]]: ''[[Bolbok]]'') sakey arapan ya klase na [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Batangas]]
+
+
+[[image:Virgin Beach Laiya.jpg|left|thumb|200px|La Iya, San Juan]]
 
 ==Listaan na Barangay==
 [[File:San_Juan_Nepomuceno_Church1.jpg|thumb|left|Simbaan diad San Juan Nepumoceno]] 
@@ -86,18 +70,11 @@ Say San Juan walay 42 ya [[barangay]]:
 * Tipaz
 </td></tr></table>
 
-==Motto==
-
- '''SAN JUAN ang bayan ko, MAHAL KO ito!'''  - Hon. [[Rodolfo H. Manalo]] (Punong Bayan)
-
-==Image==
-<gallery><centre>
-image:Ph seal batangas san juan.png|San Juan Seal
-image:Sealofsanjuanbatangas.jpg|San Juan Seal II
-</gallery>
+== Saray reperensiya ==
+{{Reflist}}
 
 {{stub}}
 {{batangas}}
 
-[[category:Batangas]]
+[[Category:Batangas]]
 [[Category:Saray baley na Batangas]]
