--- a/San_Luis,_Batangas.mw
+++ b/San_Luis,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na San Luis<br>''Ville du Saint-Louisse''<br>''Município do São Luis'' |
- sealfile     = |
- locatormapfile = Ph_locator_batangas san luis.png |
- caption      = Map of [[Batangas]] showing the location of the San Luis. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 2nd district |
- barangays    = 26 |
- class        = 4th class |
- mayor        = Rodolfo Clarete Mendoza |
- founded      = [[1861]]|
- cityhood     = - |
- areakm2      = 42.56  |
- pop2000      = 30,701 |
- popden2000   = 7200 |
- coordinates  = 13°50′27″N 120°56′05″E |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Luis, Batangas
 | 1990 = 22143		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''San Luis''' ([[salitan Français|Français]]: ''Ville du Saint-Louisse Batangas''; [[salitan Português|Português]]: ''Município do São Luis''), sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
+Say '''San Luis''' sakey baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -62,6 +44,9 @@ Saray [[barangay]] no twenty-six:
 * Tejero
 * Tungal
 * Población de Santa Analina
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{batangas}}
