--- a/San_Nicolas,_Batangas.mw
+++ b/San_Nicolas,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na [[San Nicolas, Pangasinan|San Nikolas]]<br>''Gemeinde von Sankt-Niklaus''<br>''Municipalité du Saint-Nicole''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas san nicolas.png |
- caption      = Map of [[Batangas]] showing the location of San Nikolas. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 18 |
- class        = 5th class |
- mayor        = Efipanio Sandoval |
- founded      = - |
- cityhood     = - |
- areakm2      = 14.34 |
- pop2000      = 19,046 |
- popden2000   = 1300 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Nicolas, Batangas
 | 1990 = 13174		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''[[San Nikolas]]''' (e.g. '''[[San Nicolas, Pangasinan|San Nicolas]]'''; [[salitan Alemano|Alemano]]: ''Gemeinde von Sankt-Niklaus''; [[salitan Français|Français]]: ''Municipalité du Saint-Nicole''), sakey fifth class na baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
+Say '''San Nicolas''' sakey fifth class na baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -59,6 +41,8 @@ Saray [[barangay]] ed San Nikolas walay 18:
 * Pulang-Bato (Red-Rocked)
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{batangas}}
